fix overflow portfolio

--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -12,8 +12,9 @@
 		width: 60%;
 		display: flex;
 		flex-wrap: wrap;
-		margin-top: 300px;
-
+		margin-top: 150px;
+		overflow: auto;
+		height: 500px;
 	}
 
 	.textPortfolio {
